[metadata]
name = pylim
version = 0.1.0
author = Johannes Roettenbacher
author_email = johannes.roettenbacher@web.de
long_description = file: README.md
description = Package to work with aircraft measurement data
classifiers =
   Programming Language :: Python :: 3
   License :: OSI Approved :: MIT License
   Operating System :: OS Independent
[options]
package_dir =
   = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src