[metadata]
name = pylim
version = 0.6.0
author = Johannes Roettenbacher
author_email = johannes.roettenbacher@web.de
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jroettenbacher/phd_base
license = MIT License
description = Package to work with aircraft measurement data and radiative transfer simulations
classifiers =
   Programming Language :: Python :: 3
   License :: OSI Approved :: MIT License
   Operating System :: OS Independent
[options]
package_dir =
   = src
packages = find_namespace:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src